# seboso-back

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.example  README.md  docker-compose.yml  entidades.md  populate-db.bash  populate_db.sh  requirements.txt  rotas.md  sebosodb.sql
scripts/: convertjson.js  create_admin.py  crud_simulator.py  populate_and_test.py  populate_db.py  test_routes.py
src/: lib.rs  main.rs  types.rs  utils.rs
src/auth/: book_auth.rs  catalog_auth.rs  jwt_auth.rs  mod.rs  store_auth.rs  user_auth.rs  userstore_auth.rs
src/models/: book_model.rs  catalog_model.rs  mod.rs  store_model.rs  user_model.rs  userstore_model.rs
src/routes/: book_routes.rs  catalog_routes.rs  mod.rs  sebo_routes.rs  store_routes.rs  user_routes.rs  userstore_routes.rs
src/routes/user_routes/: mod.rs
src/types/: db_types.rs  mod.rs  response_types.rs
src/utils/: env_utils.rs  error_utils.rs  mod.rs  pagination_utils.rs
