[package]
name = "seboso-back"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.16", features = ["with-chrono-0_4"] }
axum = "0.8.8"
tower-http = { version = "0.6.10", features = ["cors"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["serde_derive"] }
tower = "0.5.3"
chrono = "0.4.44"
bb8 = "0.9.1"
bb8-postgres = "0.9.0"
bcrypt = "0.19.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
